# FastAPI-Scalable-Struct

./: .gitignore  .gitkeep  README.md  requirements.txt
services/: README.md
todo_api/: pyproject.toml
